Added get calls for substructures
